--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
@@ -19,6 +21,6 @@
   },
   "engines": {
     "node": "14.x",
-    "npm":"6.x"
+    "npm": "6.x"
   }
 }
